# nova-loan-agent

./: .env.example  README.md  docker-compose.yml  run-evaluation.sh  run-simulation.ps1  run-simulation.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend-ts/: package-lock.json  package.json  tsconfig.json
backend-ts/src/: index.ts
backend-ts/src/agent/: index.ts  llm.ts  prompt.ts  tools.ts
backend-ts/src/db/: db.json  index.ts
backend-ts/src/schema/: chat-request.ts  customer.ts
backend-ts/src/services/: evaluation.ts  simulation.ts
backend/app/: config.py  main.py
backend/app/agent/: __init__.py  llm.py  prompt.py  tools.py
backend/app/db/: __init__.py  db.json
backend/app/schema/: chat_request.py  credit_report.py  customer.py  db.py  eligibility.py  financial_profile.py  product.py
backend/app/services/: evaluation.py  simulation.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/ai/: askAI.tsx
